Add coverage logging to scrutinizer build config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,3 +2,11 @@ filter:
     excluded_paths:
         - examples/*
         - resources/*
+build:
+    tests:
+        override:
+            -
+                command: 'phpunit --coverage-clover=clover.xml'
+                coverage:
+                    file: 'clover.xml'
+                    format: 'clover'
