--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,7 +6,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit --coverage-clover=clover.xml'
+                command: 'vendor/bin/phpunit -c tests/phpunit.xml.dist --coverage-clover=clover.xml'
                 coverage:
                     file: 'clover.xml'
                     format: 'clover'
